--- a/ThemeColor-Sample/Views/Storyboards/ThemeColor.storyboard
+++ b/ThemeColor-Sample/Views/Storyboards/ThemeColor.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="V8b-oR-1Rs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -165,6 +165,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="accentColorView" destination="a42-HT-Y4I" id="2LU-cL-gEa"/>
                         <outlet property="colorChoicesConceptContainerView" destination="SbM-lS-eo1" id="T1e-oC-Kan"/>
@@ -180,24 +181,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="907" y="72"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="qjE-XB-ZO2">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="V8b-oR-1Rs" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="piM-nR-wOx">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="Y6W-OH-hqX" kind="relationship" relationship="rootViewController" id="q7D-kJ-TXP"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="qoI-sw-hWR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="168" y="72"/>
         </scene>
         <!--Color Choices Concept View Controller-->
         <scene sceneID="kV9-Z1-77b">
@@ -227,7 +210,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WBF-yq-Ou8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1673.913043478261" y="-119.19642857142857"/>
+            <point key="canvasLocation" x="1657" y="-150"/>
         </scene>
         <!--Color Choices Tile View Controller-->
         <scene sceneID="Fd7-nJ-Ukf">
@@ -815,7 +798,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E4o-2A-gc0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2318.840579710145" y="108.48214285714285"/>
+            <point key="canvasLocation" x="2322" y="100"/>
         </scene>
         <!--Color Choices Slider View Controller-->
         <scene sceneID="Mw7-G3-lCm">
@@ -997,7 +980,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hhf-Gd-KpW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1674" y="325"/>
+            <point key="canvasLocation" x="1657" y="346"/>
         </scene>
     </scenes>
     <resources>
